Tab functionality, images & fonts added, proper comments, tabs, DB are to be added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">OFYWellness</string>
+    <string name="price">₹<b><big><big>100</big></big></b>/hr</string>
 </resources>
